--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,13 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/domain": ["./src/domain"],
+      "@/domain/*": ["./src/domain/*"],
+      "@/application": ["./src/application"],
+      "@/application/*": ["./src/application/*"],
+      "@/infrastructure": ["./src/infrastructure"],
+      "@/infrastructure/*": ["./src/infrastructure/*"]
     }
   },
   "include": [
