--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -56,18 +56,31 @@ jobs:
         NODE_ENV: production
         SKIP_ENV_VALIDATION: true
 
-    - name: Create deployment package
-      run: |
-        mkdir deploy
-        cp -r .next deploy/
-        cp -r public deploy/
-        cp -r node_modules deploy/
-        cp package.json deploy/
-        cp next.config.ts deploy/ || true
+    - name: Zip artifact for deployment
+      run: zip -r release.zip .next node_modules public package.json next.config.ts
+
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v3
+      with:
+        name: node-app
+        path: release.zip
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-deploy
+    
+    steps:
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v3
+      with:
+        name: node-app
+    
+    - name: Unzip artifact for deployment
+      run: unzip release.zip
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: deploy
+        package: .
