--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -56,9 +56,15 @@ jobs:
         NODE_ENV: production
         SKIP_ENV_VALIDATION: true
 
+    - name: Prepare deployment package
+      run: |
+        cp -r .next/standalone ./deploy
+        cp -r .next/static ./deploy/.next/static
+        cp -r public ./deploy/public
+        
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: .
+        package: ./deploy
